# split_read

./: Cargo.toml  README.md
benches/: buf_size.rs  compare.rs  pciid_traverse.rs
src/: lib.rs
test/: pciid_sample
